[package]
name = "hello_bonsol_tutorial"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hello_bonsol_tutorial"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
bonsol-interface = { path = "../../../bonsol/onchain/interface" , features = ["anchor", "on-chain"], default-features = false}
base64 = { version = "0.21.7", default-features = false }

